tests/paczka1/fuzzy1/94809702.err
Error in line 4: 2Uo S507 36,5
Error in line 21: UjYHJFat A906 1,8
Error in line 32: A906 S106 60,0
Error in line 34: JgXh5wc A906 65,3
Error in line 39: A906 S106 30,51
